# ohos-scrcpy-app

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
cli/: .gitignore  Cargo.toml  build.rs
cli/.cargo/: config.toml
cli/assets/: scrcpy_server.hap
cli/src/: args.rs  connection.rs  control.rs  hdc.rs  lib.rs  main.rs  server.rs
cli/src/decoder/: mod.rs  vtb.rs
cli/src/renderer/: mod.rs  sdl.rs
cli/tests/: hdc_mock_test.rs  protocol_test.rs
docs/: app_install_uninstall_design.md  bundle-hdc-design.md  design.md  hap_installer_design.md  lessons-learned.md  linux_dev_guide.md  linux_render_design.md  scrcpy_server_plan.md  terminal_design.md  video-params-design.md  windows_d3d11_zero_copy.md  windows_dev_guide.md  windows_h264_hw_decode_design.md  windows_render_design.md
openspec/: config.yaml
release_packages/1.0.0/: OHScrcpyServer.hap
scrcpy_client_flutter/: .metadata  README.md  pubspec.yaml
scrcpy_server/: .gitignore  build-profile.json5
scrcpy_server/entry/src/main/cpp/: CMakeLists.txt  ScreenCaptureEncoder.cpp  ScreenCaptureEncoder.h  TcpServer.cpp  TcpServer.h  napi_init.cpp
scrcpy_server/entry/src/main/cpp/types/libscrcpy_capture/: Index.d.ts  oh-package.json5
scripts/: build_cli.sh  install.sh
spec_doc/: dev_doc.md
(+83 files in other folders)
